# elevator-scheduling

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  res.qrc
